--- a/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
@@ -106,7 +106,7 @@
 
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
-                            <button class="btn btn-success active" id="btnSaveColor">Save</button>
+                            <button class="btn btn-success active" id="btnSaveColor" type="button">Save</button>
                             <button class="btn btn-danger active">Cancel</button>
                         </div>
                     </div>
