--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Index.cshtml
@@ -60,7 +60,7 @@
                     <div class="form-group">
 
                         <input type="text" class="form-control" placeholder="Enter Branch name." name="Branch.Branch_Name" value="@Model.Branch.Branch_Name" />
-                        <input type="hidden" name="Branch.Branch_ID" value="@Model.Branch.Branch_ID" />
+                        <input type="hidden" id="hdnBranch_Id" name="Branch.Branch_ID" value="@Model.Branch.Branch_ID" />
                         <input type="hidden" name="Branch.IsActive" value="@Model.Branch.IsActive" />
                     </div>
 
@@ -108,7 +108,8 @@
                 </div>
 
             </div>
-
+        @{
+            var j = 0;
             <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
 
                 <div class="block">
@@ -128,7 +129,7 @@
                     </div>
 
                     <br />
-
+                   
                     <div class="table-responsive" style="width:100%; margin: 50px 0;">
                         <input type="hidden" id="hdnIsEditNearDetails" value="false" />
                         <input type="hidden" id="hdnRowIdspecific" value="0" />
@@ -140,17 +141,21 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @if (Model.Branch.NearLocationDetailsList != null && Model.Branch.NearLocationDetailsList.Count() > 0)
+                                @if (Model.Branch.LocationDetailsList != null && Model.Branch.LocationDetailsList.Count() > 0)
                                 {
                                     int i = 0;
-                                    foreach (var itm in Model.Branch.NearLocationDetailsList)
+                                    foreach (var itm in Model.Branch.LocationDetailsList)
                                     {
-                                        <tr id="tr@(i)">
+                                        if (itm.Branch_Location_Flag == 1)
+                                        {
+                                            <tr id="tr@(i)">
                                             <td>
                                                 <span id="trNear_Location_Pincode@(i)"> @itm.Branch_Location_Pincode</span>
-                                                <input type="hidden" id="hdnpincode@(i)" name="Branch.NearLocationDetailsList[@i].Branch_Location_Pincode" value="@itm.Branch_Location_Pincode">
-                                                <input type="hidden" id="hdnNear_Branch_Location_ID@(i)" name="Branch.NearLocationDetailsList[@i].Branch_Location_ID" value="@itm.Branch_Location_ID">
-                                                <input type="hidden" id="hdnNear_Branch_Location_Flag@(i)" name="Branch.NearLocationDetailsList[@i].Branch_Location_Flag" value="@itm.Branch_Location_Flag">
+                                                <input type="hidden" id="hdnpincode@(i)" name="Branch.LocationDetailsList[@i].Branch_Location_Pincode" value="@itm.Branch_Location_Pincode">
+                                                <input type="hidden" id="hdnNear_Branch_Location_ID@(i)" name="Branch.LocationDetailsList[@i].Branch_Location_ID" value="@itm.Branch_Location_ID">
+                                                <input type="hidden" id="hdnFlag@(i)" name="Branch.LocationDetailsList[@i].Flag" value="@itm.Flag.ToString()">
+                                                <input type="hidden" id="hdnNear_Branch_Location_Flag@(i)" name="Branch.LocationDetailsList[@i].Branch_Location_Flag" value="@itm.Branch_Location_Flag">
+                                                <input type="hidden" id="hdnBranch_Id@(i)" name="Branch.LocationDetailsList[@i].Branch_Id" value="@Model.Branch.Branch_ID">
                                             </td>
                                            
                                             <td>
@@ -159,7 +164,9 @@
                                             </td>
                                         </tr>
                                         i = i + 1;
+                                        }
                                     }
+                                    j = i;
                                 }
                             </tbody>
                         </table>
@@ -200,18 +207,28 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @if (Model.Branch.FarLocationDetailsList != null && Model.Branch.FarLocationDetailsList.Count() > 0)
+                                @if (Model.Branch.LocationDetailsList != null && Model.Branch.LocationDetailsList.Count() > 0)
                                 {
-                                    int j = 0;
-                                    foreach (var itm in Model.Branch.FarLocationDetailsList)
+                                    
+                                    foreach (var itm in Model.Branch.LocationDetailsList)
                                     {
-                                        <tr id="tr@(j)">
-                                            <td>
+                                        if (itm.Branch_Location_Flag == 2)
+                                        {
+                                            <tr id="tr@(j)">
+                                            @*<td>
                                                 <span id="trFar_Location_Pincode@(j)"> @itm.Branch_Location_Pincode</span>
                                                 <input type="hidden" id="hdnpincode1@(j)" name="Branch.FarLocationDetailsList[@j].Branch_Location_Pincode" value="@itm.Branch_Location_Pincode">
                                                 <input type="hidden" id="hdnFar_Branch_Location_ID@(j)" name="Branch.FarLocationDetailsList[@j].Branch_Location_ID" value="@itm.Branch_Location_ID">
                                                 <input type="hidden" id="hdnFar_Branch_Location_Flag@(j)" name="Branch.FarLocationDetailsList[@j].Branch_Location_Flag" value="@itm.Branch_Location_Flag">
-                                            </td>
+                                            </td>*@
+                                                <td>
+                                                    <span id="trNear_Location_Pincode@(j)"> @itm.Branch_Location_Pincode</span>
+                                                    <input type="hidden" id="hdnpincode@(j)" name="Branch.LocationDetailsList[@j].Branch_Location_Pincode" value="@itm.Branch_Location_Pincode">
+                                                    <input type="hidden" id="hdnNear_Branch_Location_ID@(j)" name="Branch.LocationDetailsList[@j].Branch_Location_ID" value="@itm.Branch_Location_ID">
+                                                    <input type="hidden" id="hdnFlag@(j)" name="Branch.LocationDetailsList[@j].Flag" value="@itm.Flag.ToString()">
+                                                    <input type="hidden" id="hdnNear_Branch_Location_Flag@(j)" name="Branch.LocationDetailsList[@j].Branch_Location_Flag" value="@itm.Branch_Location_Flag">
+                                                    <input type="hidden" id="hdnBranch_Id@(j)" name="Branch.LocationDetailsList[@j].Branch_Id" value="@Model.Branch.Branch_ID">
+                                                </td>
 
                                             <td>
                                                 <button type="button" id="edit-far-details" class="btn btn-box-tool btn-tel-edit" onclick="javascript:EditFarLocationDetailsData(@j)"><i class='fa fa-pencil'></i></button>
@@ -219,6 +236,7 @@
                                             </td>
                                         </tr>
                                         j = j + 1;
+                                        }
                                     }
                                 }
                             </tbody>
@@ -228,7 +246,7 @@
                 </div>
 
             </div>
-
+        }
             <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
 
                 <div class="btn-group">
