--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
@@ -69,7 +69,7 @@
 
         </div>
 
-        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPager">
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divBranchPager">
 
         </div>
 
