--- a/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
@@ -42,9 +42,15 @@
 						<input type="hidden" name="Category.Category_Id">
                     </div>
 
-                    <div class="form-group" style="margin-bottom: 5px; float: right;">
+                    @*<div class="form-group" style="margin-bottom: 5px; float: right;">
                         <label class="switch">
                             <input  value="1" type="checkbox">
+                            <span></span>
+                        </label>
+                    </div>*@
+                    <div class="form-group" style="margin-bottom: 5px; float: right;">
+                        <label class="switch">
+                            <input name="Category.IsActive" value="1" checked type="checkbox" id="Flag">
                             <span></span>
                         </label>
                     </div>
@@ -52,7 +58,7 @@
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnSaveCategory">Save</button>
-                            <button class="btn btn-danger active">Cancel</button>
+                            <button class="btn btn-danger active" type="button" id="btnCancel">Cancel</button>
                         </div>
                     </div>
                 </form>
