--- a/MyLeoRetailer/Views/PostLogin/Master/Category/_SubCategory.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/_SubCategory.cshtml
@@ -1,31 +1,41 @@
 ﻿@model MyLeoRetailer.Models.SubCategoryViewModel  
+
 <script src="~/Scripts/Modules/Category/sub_category_methods.js"></script>
 <script src="~/Scripts/Modules/Category/sub_category_events.js"></script>
+<script src="~/Scripts/Modules/Category/sub_category_validation.js"></script>
+
 <div class="block" style="margin-bottom:0px;">
     <h4 style="margin-top: 0px;">Create - Update sub category. <span class="label label-primary">@Model.SubCategory.Category</span></h4>
-		<form role="form">
-			<div class="form-group">
-				<input type="text" class="form-control" placeholder="Enter sub category." name="SubCategory.Sub_Category" />
-				<input type="hidden"  name="SubCategory.Sub_Category_Id" />
-				<input type="hidden"  name="SubCategory.Category_Id" value="@Model.SubCategory.Category_Id"/>
-				<input type="hidden"  name="Filter.Category_Id" value="@Model.SubCategory.Category_Id"/>
-			</div>
+    <form role="form" id="frmSubCategory">
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Enter sub category." name="SubCategory.Sub_Category" />
+            <input type="hidden" name="SubCategory.Sub_Category_Id" />
+            <input type="hidden" name="SubCategory.Category_Id" value="@Model.SubCategory.Category_Id" />
+            <input type="hidden" name="Filter.Category_Id" value="@Model.SubCategory.Category_Id" />
+        </div>
 
-			<div class="form-group" style="margin-bottom: 5px; float: right;">
-				<label class="switch">
-					<input checked="" value="0" type="checkbox">
-					<span></span>
-				</label>
-			</div>
+        @*<div class="form-group" style="margin-bottom: 5px; float: right;">
+            <label class="switch">
+                <input checked="" value="0" type="checkbox">
+                <span></span>
+            </label>
+        </div>*@
 
-			<div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
-				<div class="btn-group">
-					<button type="button" class="btn btn-success active" id="btnSaveSubCategory">Save</button>
-					<button class="btn btn-danger active">Cancel</button>
-				</div>
-			</div>
+        <div class="form-group" style="margin-bottom: 5px; float: right;">
+            <label class="switch">
+                <input name="SubCategory.IsActive" value="1" checked type="checkbox" id="SubCateFlag">
+                <span></span>
+            </label>
+        </div>
 
-		</form>
+        <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
+            <div class="btn-group">
+                <button type="button" class="btn btn-success active" id="btnSaveSubCategory">Save</button>
+                <button class="btn btn-danger active">Cancel</button>
+            </div>
+        </div>
+
+    </form>
 
         <h4 style="margin-top: 0px;">Sub category listing.</h4>
 
