--- a/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model MyLeoRetailer.Models.SizeGroupViewModel
+
+
+@{
     ViewBag.Title = "Index";
 }
 
@@ -40,16 +43,27 @@
 
                 <form id="frmSizeGroup">@*role="form"*@ 
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Size Group</span>
                         <input type="text" class="form-control" placeholder="Enter size group." name="SizeGroup.Size_Group_Name" />
                         <input type="hidden" name="SizeGroup.Size_Group_Id" id="hdnSizeGroupID">
                     </div>
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
-                        @*<label>Set Active:</label>*@
+
                         <label class="switch">
-                            <input checked="" value="0" type="checkbox">
+
+                            @if (Model.SizeGroup.IsActive == 0)
+                            {
+                                <input value="@Model.SizeGroup.IsActive" name="SizeGroup.IsActive" type="checkbox" id="Flag">
+                            }
+                            else
+                            {
+                                <input value="@Model.SizeGroup.IsActive" name="SizeGroup.IsActive" checked="checked" type="checkbox" id="Flag">
+                            }                           
                             <span></span>
+
                         </label>
+
                     </div>
                     
 
@@ -59,7 +73,7 @@
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnSaveSizeGroup">Save</button>
                             @*<button type="button" class="btn btn-default" id="abc">Default</button>*@
-                            <button type ="button" class="btn btn-danger active">Cancel</button>
+                            <button type ="reset" class="btn btn-danger active">Cancel</button>
                         </div>
                     </div>
 
@@ -169,7 +183,8 @@
                         <div class="col-md-12" style="padding-left: 0px;padding-top:15px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                             <div class="btn-group">
                                 <button type="button" id="btnSaveSize" class="btn btn-success active">Save</button>
-                                <button type="button" class="btn btn-danger active">Cancel</button>
+                                @*<button type="button" class="btn btn-danger active">Cancel</button>*@
+                                <a class="btn btn-danger active" role="button" href="@Url.Action("Index", "Size")">Cancel </a>
                             </div>
                         </div>
                     </div>
