--- a/MyLeoRetailer/Views/PostLogin/Master/Role/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Role/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
+﻿
+<script src="~/Scripts/Modules/Role/role-event.js"></script>
+<script src="~/Scripts/Modules/Role/role-method.js"></script>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
@@ -32,24 +32,23 @@
             <div class="block" style="margin-bottom:0px;">
                 <h4 style="margin-top: 0px;">Create - Update role.</h4>
 
-                <form role="form">
+                <form role="form" id="frmRole">
                     <div class="form-group">
-                        @*<label>Create / Update size group:</label>*@
-                        <input type="text" class="form-control" placeholder="Enter role." />
+                        <input type="text" name="role.Role_Name" class="form-control" placeholder="Enter role." />
+                        <input type="hidden" name="role.Role_Id">
                     </div>
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
-                        @*<label>Set Active:</label>*@
                         <label class="switch">
-                            <input checked="" value="0" type="checkbox">
+                            <input name="role.Is_Active" value="1" checked type="checkbox" id="Flag">
                             <span></span>
                         </label>
                     </div>
 
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
-                            <button class="btn btn-success active">Save</button>
-                            <button class="btn btn-danger active">Cancel</button>
+                            <button class="btn btn-success active" type="button" id="btnSave">Save</button>
+                            <button class="btn btn-danger active" type="button">Cancel</button>
                         </div>
                     </div>
 
