--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -38,12 +38,14 @@
                 <h4 style="margin-top: 0px;">Create - Update brand.</h4>
 
                 <form role="form" id="frmBrand">
-                    <div class="form-group">
+
+                    <div class="form-group" style="width:500px;">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Brand name.</span>
                         <input type="text" class="form-control" placeholder="Enter brand." name="Brand.Brand_Name" />
                         <input type="hidden" name="Brand.Brand_Id">
                     </div>
 
-                    <div class="form-group" style="margin-bottom: 5px; float: right;">
+                    <div class="form-group" style="margin-bottom: 5px; width:1110px; float: right;">
                         <label class="switch">
                             <input checked="" name="Brand.IsActive" value="0" type="checkbox" id="Flag">
                             <span></span>
@@ -53,8 +55,7 @@
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnSaveBrand">Save</button>
-                            <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Index", "Brand")'">Cancel</button>
-                            @*<button class="btn btn-danger active">Cancel</button>*@
+                            <button type="reset" class="btn btn-danger active">Cancel</button>
                         </div>
                     </div>
 
@@ -62,14 +63,12 @@
 
                 <h4 style="margin-top: 0px;">Brand listing.</h4>
 
-                <div class="form-group auto-complete">
-                    <div class="input-group">
-                        <input type="text" class="form-control brand-filter autocomplete-text" name="Filter.Brand_Name" id="txtBrand_Name" placeholder="Enter brand to search" value="" data-table="Brand" data-col="Brand_Id,Brand_Name" data-headernames="Brand">
-                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                        <input type="hidden" id="hdnBrandId" value="" name="Filter.Brand_Id" class="auto-complete-value" />
-                        <input type="hidden" id="hdnBrandName" value="" name="Filter.Brand" class="auto-complete-label" />
-                    </div>
+                
+                <div class="form-group" style="width:500px; margin-bottom: 5px; ">
+                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Brand name.</span>
+                    <input type="text" class="form-control" name="Filter.Brand_Name" placeholder="Enter brand name to search" />
                 </div>
+               
 
                 <div class="list-group border-bottom push-down-20" id="Brand_Grid">
 
