Tax,Gift Voucher,Alteration,Vendor Contact Changes Done

--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -41,11 +41,13 @@
                         <h4 style="margin-top: 0px;">Voucher information.</h4>
 
                         <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher no</span>
                             <input type="text" class="form-control" placeholder="Enter Gift Voucher No." name="GiftVoucher.Gift_Voucher_No" value="@Model.GiftVoucher.Gift_Voucher_No" />
                             <input type="hidden" class="form-control" id="hdn_GiftVoucherId" name="GiftVoucher.Gift_Voucher_Id" value="@Model.GiftVoucher.Gift_Voucher_Id" />
                         </div>
 
                         <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Person name</span>
                             <input type="text" class="form-control" placeholder="Enter person name." name="GiftVoucher.Person_Name" value="@Model.GiftVoucher.Person_Name" />
                         </div>
 
@@ -61,34 +63,19 @@
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher date.</span>
                             <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                @if (Model.GiftVoucher.Gift_Voucher_Date != DateTime.MinValue)
-                                {
-                                    <input type="text" class="form-control datepicker" disabled="disabled" name="GiftVoucher.Gift_Voucher_Date" value="@Model.GiftVoucher.Gift_Voucher_Date.ToShortDateString()" />
-                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                }
-                                else
-                                {
-                                    <input type="text" class="form-control datepicker" disabled="disabled" name="GiftVoucher.Gift_Voucher_Date" value="@DateTime.Now.ToShortDateString()" />
+                                <input type="text" class="form-control datepicker" name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Date.ToString("dd-MM-yyyy")))" reado readonly />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                }
                             </div>
-                        </div>
+                        </div>  
+
 
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher expiry date</span>
                             <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                @if (Model.GiftVoucher.Gift_Voucher_Expiry_Date != DateTime.MinValue)
-                                {
-                                    <input type="text" class="form-control datepicker" disabled="disabled" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToShortDateString()" />
-                                    <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                }
-                                else
-                                {
-                                    <input type="text" class="form-control datepicker" disabled="disabled" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@DateTime.Now.ToShortDateString()" />
+                                <input type="text" class="form-control datepicker" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("dd-MM-yyyy")))" reado readonly />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                }
                             </div>
-                        </div>
+                        </div>  
 
                     </div>
 
@@ -100,11 +87,13 @@
                         <h4 style="margin-top: 0px;">Amount detail.</h4>
 
                         <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher amount</span>
                             <input type="text" class="form-control" placeholder="Enter voucher amount." name="GiftVoucher.Gift_Voucher_Amount" value="@(Model.GiftVoucher.Gift_Voucher_Amount == 0 ? "" : Model.GiftVoucher.Gift_Voucher_Amount.ToString())" />
                         </div>
 
 
                         <div class="form-group">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment mode</span>
                             <select class="form-control select" placeholder="Select payment mode." id="mode" name="GiftVoucher.Payment_Mode" value="@Model.GiftVoucher.Payment_Mode">
                                 @foreach (var item in LookupInfo.Get_GiftVoucher_Payment_Mode())
                                 {
@@ -122,12 +111,14 @@
 
 
 
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter bank name." id="bankname" name="GiftVoucher.Bank_Name" value="@Model.GiftVoucher.Bank_Name" style="display: none;" />
+                        <div class="form-group" id="divBankName">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Bank name</span>
+                            <input type="text" class="form-control" placeholder="Enter bank name." id="bankname" name="GiftVoucher.Bank_Name" value="@Model.GiftVoucher.Bank_Name"  />
                         </div>
 
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter credit card number." id="creditcardno" name="GiftVoucher.Credit_Card_No" value="@Model.GiftVoucher.Credit_Card_No" style="display: none;" />
+                        <div class="form-group" id="divCreditCardNo">
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit-Card no</span>
+                            <input type="text" class="form-control" placeholder="Enter credit card number." id="creditcardno" name="GiftVoucher.Credit_Card_No" value="@Model.GiftVoucher.Credit_Card_No"  />
                         </div>
                     </div>
 
@@ -137,7 +128,7 @@
 
                 <div class="btn-group">
                     <button class="btn btn-success active" type="button" id="btnGiftVoucherSave">Save</button>
-                    <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Search", "GiftVoucher")'">Cancel</button>
+                    <button type="reset" class="btn btn-danger active">Cancel</button>
                     <button class="btn btn-twitter active" role="button" id="btnGiftVoucherPrint">Print</button>
 
                 </div>
