--- a/MyLeoRetailer/Views/PostLogin/Master/Alteration/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Alteration/Search.cshtml
@@ -52,6 +52,7 @@
                         <div class="col-md-5">
 
                             <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no</span>
                                 <input type="text" class="form-control" name="Filter.Customer_Mobile_No" placeholder="Enter customer mobile number to search." />
                                 <input type="hidden" id="hdnAlteration_ID" name="Alteration.Alteration_ID" value="@Model.Alteration.Alteration_ID">
                             </div>
@@ -61,8 +62,8 @@
                         <div class="col-md-7" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <button type="button" class="btn btn-success active" onclick="location.href='@Url.Action("Index", "Alteration")'">Create</button>
-                                
+                               
+                                <button role="button" class="btn btn-success active" value="Create" id="btncreateA" @*onclick="location.href='@Url.Action("Index", "VendorContact")'"*@>Create</button>
                                 <button class="btn btn-danger active" role="button" style="display:none;"  value="Edit" id="btnEditAlteration">Edit</button>
                             </div>
 
