--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Search.cshtml
@@ -44,6 +44,7 @@
                         <div class="col-md-5">
 
                             <div class="form-group">
+                                <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher no</span>
                                 <input type="text" class="form-control" placeholder="Enter Voucher no to search." name="Filter.Gift_Voucher_No"/>
                                 <input type="hidden" id="hdn_GiftVoucherId" name="GiftVoucher.Gift_Voucher_Id" value="@Model.GiftVoucher.Gift_Voucher_Id">
 
@@ -55,14 +56,14 @@
 
                             <div class="btn-group">
                                 
-                                <button type="button" class="btn btn-success active" onclick="location.href='@Url.Action("Index", "GiftVoucher")'">Create</button>
+                                <button type="button" class="btn btn-success active" value="Create" id="btncreateGV">Create</button>
+                               
                                 <button class="btn btn-danger active" type="button" style="display:none;" id="btnGiftVoucher">Edit</button>
                             </div>
 
                         </div>
 
                     </div>
-
                 </form>
 
             </div>
