--- a/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
@@ -38,6 +38,7 @@
 
                 <div class="form-group">
                     @*<label>Create / Update size group:</label>*@
+                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax name</span>
                     <input type="text" class="form-control" name="Filter.Tax_Name" placeholder="Enter tax name to search" />
                 </div>
 
@@ -60,25 +61,18 @@
 
                 <form role="form" id="frmTax">
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax name</span>
                         <input type="text" class="form-control" placeholder="Enter tax name." name="Tax.Tax_Name" />
                         <input type="hidden" name="Tax.Tax_Id">
                     </div>
 
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax value</span>
                         <input type="text" class="form-control" placeholder="Enter tax value (in percentage)." name="Tax.Tax_Value" />
                     </div>
 
-                    @*<div class="form-group" style="margin-bottom: 5px; float: right;">
-                        @*<label>Set Active:</label
-                        <label class="switch">
-                            <input checked="" name="Tax.IsActive" value="0" type="checkbox" id="Flag">
-                            <span></span>
-                        </label>
-                    </div>*@
-                    <div class="form-group">
-                        <div class="col-xs-6 col-sm-6 col-md-8" style="padding-left: 0px;">
-                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Set active.</span>
-                        </div>
+                   
+                   
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
                         <label class="switch">
                                 @if (Model.Tax.IsActive == 0)
@@ -93,12 +87,12 @@
                             <span></span>
                         </label>
                     </div>
-                    </div>
+                   
 
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px;">
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnSaveTax">Save</button>
-                            <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Index", "Tax")'">Cancel</button>
+                            <button type="reset" class="btn btn-danger active">Cancel</button>
                         </div>
                     </div>
 
