--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
@@ -5,6 +5,7 @@
 
 <script src="~/Scripts/Modules/VendorContact/vendorcontact_events.js"></script>
 <script src="~/Scripts/Modules/VendorContact/vendorcontact_methode.js"></script>
+<script src="~/Scripts/Modules/VendorContact/search_vendorcontact_methode.js"></script>
 <script src="~/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/VendorContact/vendorcontact_validation.js"></script>
 
@@ -21,7 +22,7 @@
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
         <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; VendorContact Management</h2>
+            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Vendor Contact Management</h2>
         </div>
     </div>
 
@@ -34,24 +35,25 @@
 
         <div class="row">
 
-            <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
+            <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 475px;">
 
                 <div class="block" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; ">
 
                     <h4 style="margin-top: 0px;">Select vendor.</h4>
 
                     <div class="form-group">
-                        <select class="form-control select" name="VendorContact.Vendor_ID" placeholder="Select Vendor.">
-                            <option value="">Select Vendor</option>
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor</span>
+                        <select class="form-control select" name="VendorContact.Vendor_Id" id="drpVendor"  placeholder="Select Vendor.">
+                            <option value=0>Select Vendor</option>
                             @foreach (var item in Model.Vendors)
                             {
-                                if (Model.VendorContact.Vendor_ID == item.Vendor_ID)
+                                if (Model.VendorContact.Vendor_Id == item.Vendor_Id)
                                 {
-                                    <option value="@item.Vendor_ID" selected="selected">@item.Vendor_Name</option>
+                                    <option value="@item.Vendor_Id" selected="selected">@item.Vendor_Name</option>
                                 }
                                 else
                                 {
-                                    <option value="@item.Vendor_ID">@item.Vendor_Name</option>
+                                    <option value="@item.Vendor_Id">@item.Vendor_Name</option>
                                 }
                             }
                         </select>
@@ -79,7 +81,7 @@
                     <br />
                     <br />
                     <div class="form-group">
-
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">First name</span>
                         <input type="text" class="form-control" placeholder="Enter first name." name="VendorContact.First_Name" value="@Model.VendorContact.First_Name" />
                         <input type="hidden" name="VendorContact.VendorContact_Id" id="hdnVendorContact_Id" value="@Model.VendorContact.VendorContact_Id">
                         <input type="hidden" name="VendorContact.Vendor_Contact_Name" value="@Model.VendorContact.Vendor_Contact_Name">
@@ -88,7 +90,7 @@
                     </div>
 
                     <div class="form-group">
-
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Last name</span>
                         <input type="text" class="form-control" placeholder="Enter last name." name="VendorContact.Last_Name" value="@Model.VendorContact.Last_Name" />
 
                     </div>
@@ -101,23 +103,29 @@
                 <div class="block">
                     <h4 style="margin-top: 0px;">Address.</h4>
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Address</span>
                         <textarea class="form-control" rows="5" placeholder="Address." name="VendorContact.Address" value="@Model.VendorContact.Address">@Model.VendorContact.Address</textarea>
                     </div>
 
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">City</span>
                         <input type="text" class="form-control" placeholder="Enter city." name="VendorContact.City" value="@Model.VendorContact.City" />
                     </div>
 
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">State</span>
                         <input type="text" class="form-control" placeholder="Enter state." name="VendorContact.State" value="@Model.VendorContact.State" />
                     </div>
 
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Country</span>
                         <input type="text" class="form-control" placeholder="Enter country." name="VendorContact.Country" value="@Model.VendorContact.Country" />
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" maxlength="6" placeholder="Enter pincode." name="VendorContact.Pincode" value="@Model.VendorContact.Pincode" />
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Pincode</span>
+                       @* <input type="text" class="form-control" maxlength="6" placeholder="Enter pincode." name="VendorContact.Pincode" value="@Model.VendorContact.Pincode" />*@
+                        <input type="text" class="form-control" placeholder="Enter pincode." name="VendorContact.Pincode" value="@(Model.VendorContact.Pincode == 0 ? "" : Model.VendorContact.Pincode.ToString())" maxlength="6" />
                     </div>
                 </div>
 
@@ -129,14 +137,17 @@
                     <h4 style="margin-top: 0px;">Communication detail.</h4>
 
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no1</span>
                         <input type="text" class="form-control" maxlength="12" placeholder="Enter mobile number 1." name="VendorContact.Mobile1" value="@Model.VendorContact.Mobile1" />
                     </div>
 
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no2</span>
                         <input type="text" class="form-control" maxlength="12" placeholder="Enter mobile number 2." name="VendorContact.Mobile2" value="@Model.VendorContact.Mobile2" />
                     </div>
 
                     <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Email</span>
                         <input type="text" class="form-control" placeholder="Enter email address." name="VendorContact.Email_Id" value="@Model.VendorContact.Email_Id" />
                     </div>
                 </div>
@@ -148,12 +159,13 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveVendorContact">Save</button>
 
-                    <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Index", "VendorContact")'">Cancel</button>
+                    <button type="reset" class="btn btn-danger active">Cancel</button>
                 </div>
 
             </div>
 
         </div>
     </form>
+
 </div>
 
