Product Master : 1) Insert Product except Product Images. 2) Product MRP Page done design part and binding for only singlw color.

--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -16,6 +16,7 @@
                             <li><a href="/Tax/Index"><span class="fa fa-users"></span> Tax Management</a></li>
                             <li><a href="/Customer/Search"><span class="fa fa-users"></span> Customer Management</a></li>
                             <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
+                            @*<li><a href="/Product/_ProductPrizing"><span class="fa fa-users"></span> Product Price Management</a></li>*@
                             <li><a href="/VendorContact/Search"><span class="fa fa-users"></span> VendorContact Management</a></li>
                             <li><a href="/GiftVoucher/Search"><span class="fa fa-users"></span> GiftVoucher Management</a></li>
 
