--- a/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Search";
 }
+<script src="~/Scripts/Modules/common_methods.js"></script>
+<script src="~/Scripts/Modules/Product/search_Product_event.js"></script>
+<script src="~/Scripts/Modules/Product/search_Product_method.js"></script>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
@@ -9,7 +12,6 @@
     <li class="active">Product Management</li>
 </ul>
 <!-- END BREADCRUMB -->
-
 <!-- START CONTENT FRAME -->
 <div class="content-frame">
 
@@ -34,25 +36,36 @@
                 <form role="form" id="frmSearchProduct">
 
                     <div class="row">
-
+                        <input type="hidden" id="hdf_ProductId" value="" name="Product.Product_Id" class="auto-complete-value" />
+                        <input type="hidden" id="hdf_SizeGroupId" value="" name="Product.Size_Group_Id" class="auto-complete-value" />
+                        @*<div class="col-md-10">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Enter Product article no." name="Filter.Article_No" />
+                                </div>
+                            </div>*@
                         <div class="col-md-10">
-
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Enter product sku code." name="Product.SKU_Code"/>
+                            <div class="form-group auto-complete">
+                                <div class="input-group">
+                                    <input type="text" class="form-control brand-filter autocomplete-text" name="Filter.Article_No" id="txtArticle_No" placeholder="Enter Product article no." value="" data-table="Product" data-col="Product_Id,Article_No" data-headernames="Product">
+                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    <input type="hidden" id="hdnProduct_Id" value="" name="Filter.Product_Id" class="auto-complete-value" />
+                                    <input type="hidden" id="hdnArticle_No" value="" name="Filter.Article_No" class="auto-complete-label" />
+                                </div>
                             </div>
-
                         </div>
 
-                        <div class="col-md-2" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                    </div>
+                    <div class="row">
+                        <div class="block">
+                            <div class="col-md-10" style="padding-top: 20px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;"> 
+                                <div class="btn-group"> 
+                                    <a class="btn btn-success active" role="button" href="@Url.Action("Index", "Product")">Create </a>
+                                    <button class="btn btn-danger active" id="btnEdit" style="display:none">Edit</button> 
+                                    <button class="btn btn-success active" id="btnProductMRP" style="display:none">Add Product MRP</button>
+                                </div>
 
-                            <div class="btn-group">
-                                @*<button class="btn btn-success active">Create</button>*@
-                                <a class="btn btn-success active" role="button" href="@Url.Action("Index", "Product")">Create </a>
-                                <button class="btn btn-danger active">Edit</button>
                             </div>
-
                         </div>
-
                     </div>
 
                 </form>
@@ -66,7 +79,7 @@
         </div>
 
         <div class="col-md-12" style="padding: 0px;text-align:center;" id="divProductPager">
-             
+
         </div>
 
     </div>
