--- a/MyLeoRetailer/Views/PreLogin/Login/Index.cshtml
+++ b/MyLeoRetailer/Views/PreLogin/Login/Index.cshtml
@@ -44,6 +44,7 @@
                                 <option>Andheri</option>
                                 <option>Virar</option>
                                 <option>Thane</option>
+                                <option>All</option>
                             </select>
                         </div>
                     </div>
