--- a/MyLeoRetailer/Views/Shared/_Layout.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Layout.cshtml
@@ -171,7 +171,7 @@
 </html>
 
  <!-- START TEMPLATE -->
-        <script type="text/javascript" src="../Content/Atlant/js/settings.js"></script>
+        @*<script type="text/javascript" src="../Content/Atlant/js/settings.js"></script>*@
         <script type="text/javascript" src="../Content/Atlant/js/plugins.js"></script>        
         <script type="text/javascript" src="../Content/Atlant/js/actions.js"></script>
         
