Purchase Order and Invoice

--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
@@ -51,7 +51,7 @@
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreateBranch">Create</button>
-                                <button class="btn btn-danger active" role="button" value="Edit" id="btnEditBranch" style="display:none;">Edit</button>
+                                <button class="btn btn-danger active" role="button" value="Edit" id="btnEditBranch">Edit</button>
                             </div>
 
                         </div>
