--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -20,6 +20,8 @@
                             <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
                             <li><a href="/GiftVoucher/Search"><span class="fa fa-users"></span> GiftVoucher Management</a></li>
                             <li><a href="/Alteration/Search"><span class="fa fa-users"></span> Alteration Management</a></li>
+                            <li><a href="/PurchaseOrder/Search"><span class="fa fa-users"></span> Purchase Order Management</a></li>
+                            <li><a href="/PurchaseInvoice/Search"><span class="fa fa-users"></span> Purchase Invoice Management</a></li>
 
                             <li><a href="/Vendor/Search"><span class="fa fa-users"></span> Vendor Management</a></li>
                             <li class="xn-openable">
